--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/Lokaltog/vim-powerline
 [submodule "home/.vim/bundle/command-t"]
 	path = home/.vim/bundle/command-t
-	url = https://github.com/wincent/Command-T.git
+	url = git://git.wincent.com/command-t.git
